Bug 261668 - paste.kde.org regression in 4.6/trunk
Summary: paste.kde.org regression in 4.6/trunk
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: SVN
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Sayak Banerjee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-30 23:22 UTC by Albert Astals Cid
Modified: 2011-01-19 01:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2010-12-30 23:22:23 UTC
Version:           SVN (using Devel) 
OS:                Linux

The paste area of a paste page like http://paste.kde.org/~tsdgeos/1449/ does not span to the whole available width and instead is constrained between the share icons and the raw code text. 

Reproducible: Always

Steps to Reproduce:
Open http://paste.kde.org/~tsdgeos/1449/ with Konqueror 4.5 and with Konqueror 4.6 and see the difference



OS: Linux (x86_64) release 2.6.36-ARCH
Compiler: gcc
Comment 1 Sayak Banerjee 2011-01-01 04:58:17 UTC
Thank you for the bug report. Please report pastebin issues under component paste.kde.org

Thanks!
Sayak
Comment 2 Sayak Banerjee 2011-01-01 04:59:52 UTC
Oops, false alarm. Looks like the component doesn't exist :D
Anyway, will look into the bug. Thanks again.
Comment 3 Maksim Orlovich 2011-01-01 16:34:59 UTC
And I am looking at it from KHTML end. Likely reduction:

<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">

<style>
.goleft
{
    float: left;
}
.imagefix a img, .imagefix img
{
    vertical-align: -15%;
}
</style>
<body>

<div class="goleft imagefix" style="border:2px solid red;">
    <a href="http://www.kde.org">
        <img src="https://bugs.kde.org/media/images/top-kde.jpg">
    </a>
</div>
Comment 4 Maksim Orlovich 2011-01-01 17:15:29 UTC
OK, figured it out --- a StyleBoxData::operator== bug that has us hash-consing unrelated things. In case I don't get an OK to commit this before 4.6.0 a workaround is to add max-width: 5000px; (or similar) to the .imagefix CSS.
Comment 5 Maksim Orlovich 2011-01-19 00:56:50 UTC
SVN commit 1215533 by orlovich:

Fix a bug in khtml::StyleBoxData::operator == that made us incorrectly
hashcons different styles, messing up paste.kde.org

BUG: 261668



 M  +1 -0      render_style.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1215533
Comment 6 Maksim Orlovich 2011-01-19 00:59:10 UTC
SVN commit 1215535 by orlovich:

Regression test for r1215533

CCBUG:261668


 A             baseline/unsorted/261668.html-dom  
 AM            baseline/unsorted/261668.html-dump.png  
 A             baseline/unsorted/261668.html-render  
 A             tests/unsorted/261668.html  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1215535
Comment 7 Maksim Orlovich 2011-01-19 01:00:05 UTC
SVN commit 1215536 by orlovich:

Merged revision:r1215533 | orlovich | 2011-01-18 18:55:32 -0500 (Tue, 18 Jan 2011) | 6 lines

Fix a bug in khtml::StyleBoxData::operator == that made us incorrectly
hashcons different styles, messing up paste.kde.org

BUG: 261668

 M  +1 -0      render_style.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1215536