Fix a bug in khtml::StyleBoxData::operator == that made us incorrectly hashcons different styles, messing up paste.kde.org

BUG: 261668


svn path=/trunk/KDE/kdelibs/; revision=1215533